--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,36 @@
+input[type=text] {
+  width: 800px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: white;
+  background-image: url('images/searchicon.png');
+  background-position: 10px 10px;
+  background-size: 20px;
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 40px;
+/*  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;*/
+}
+
+/*input[type=text]:focus {
+  width: 100%;
+}*/
+
+#logo {
+  float: left;
+}
+
+#searchbar {
+}
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 5vmin;
   pointer-events: none;
 }
 
@@ -19,12 +46,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /*justify-content: center;*/
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 20px;
 }
 
 .App-link {
+  border-left: 1000px;
   color: #61dafb;
 }
 
