--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ input[type=text] {
 
 #logo {
   float: left;
+  padding-bottom:10px;
 }
 
 #searchbar {
@@ -60,15 +61,15 @@ input[type=text] {
 }
 
 .App-logo {
-  height: 5vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/*@media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+}*/
 
 .App-header {
   background-color: #282c34;
